syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_package = "com.hugosave.intern.project.proto";
option java_multiple_files = true;

message RealTimePriceDTO {
  string asset_code = 1;
  double value = 2;
  double ask = 3;
  double bid = 4;
  string weight = 5;
  string currency = 6;
  google.protobuf.Timestamp timestamp = 7;
}

message RealTimePriceList {
  repeated RealTimePriceDTO realTimePrices = 1;
  string nextPageToken = 2;
  string reversePageToken = 3;
}

message PriceDTO {
  string asset_name = 1;
  double value = 2;
}
